--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,17 +7,10 @@
             <div class="content">
                 <div class="title-area">
                     <h1 class="title-modern">Mindful Play</h1>
-                    <h2>Probably the most stylish bootstrap template in the world!</h2>
+                    <h2>O que é Mindfulness?</h2>
                     <div class="separator line-separator">♦</div>
                 </div>
-
-                <div class="button-get-started">
-                    <a href="http://www.creative-tim.com/product/gaia-bootstrap-template" target="_blank" class="btn btn-white btn-fill btn-lg ">
-                        Download Demo
-                    </a>
-                </div>
             </div>
-
         </div>
     </div>
 </div>
