--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
       </mdb-navbar-brand>
       <links>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-12 mt-4">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active waves-light">
                 <a class="nav-link text-dark font-weight-bold">O que é Mindfulness
@@ -25,7 +25,7 @@
                 </div>
               </li>
               <li class="nav-item waves-light">
-                <a class="nav-link text-dark font-weight-bold">Sobre a intrutora</a>
+                <a class="nav-link text-dark font-weight-bold">Sobre a instrutora</a>
               </li>
               <li class="nav-item active waves-light dropdown">
                 <a class="nav-link text-dark font-weight-bold">Mindfulness no ambiente educacional</a>
@@ -42,7 +42,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-12">
+          <div class="col-md-12 mb-4">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active waves-light">
                 <a class="nav-link text-dark font-weight-bold">Mindfulness e SEL</a>
@@ -75,17 +75,40 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link text-dark dropdown-toggle" mat-button [matMenuTriggerFor]="menu">Sobre a Mindful Play</a>
-          <mat-menu #menu="matMenu" yPosition="above">
-            <ul class="navbar-nav mr-auto">
-              <li mat-menu-item><a class="dropdown-item" href="#">Action</a></li>
-              <li mat-menu-item><a class="dropdown-item" href="#">Action 2</a></li>
-            </ul>
-          </mat-menu>
+        <li class="nav-item active waves-light dropdown">
+          <a class="nav-link text-dark font-weight-bold">Sobre a Mindful Play</a>
+          <div class="dropdown-content">
+            <a class="dropdown-item font-weight-bold">Metodologia</a>
+            <a class="dropdown-item font-weight-bold">Programa</a>
+          </div>
         </li>
-        <li class="nav-item waves-light" mdbWavesEffect>
-          <a class="nav-link text-dark">Profile</a>
+        <li class="nav-item waves-light">
+          <a class="nav-link text-dark font-weight-bold">Sobre a instrutora</a>
+        </li>
+        <li class="nav-item active waves-light dropdown">
+          <a class="nav-link text-dark font-weight-bold">Mindfulness no ambiente educacional</a>
+          <div class="dropdown-content">
+            <a class="dropdown-item font-weight-bold">Você sabia?</a>
+            <a class="dropdown-item font-weight-bold">Por quê Mindfulness nas escolas?</a>
+            <a class="dropdown-item font-weight-bold">Benefícios para educadores e gestores?</a>
+            <a class="dropdown-item font-weight-bold">Benefícios para crianças e adolescentes</a>
+            <a class="dropdown-item font-weight-bold">Um novo ABC</a>
+          </div>
+        </li>
+        <li class="nav-item active waves-light">
+          <a class="nav-link text-dark font-weight-bold">Perspectivas Neorocientíficas</a>
+        </li>
+        <li class="nav-item active waves-light">
+          <a class="nav-link text-dark font-weight-bold">Mindfulness e SEL</a>
+        </li>
+        <li class="nav-item active waves-light">
+          <a class="nav-link text-dark font-weight-bold">Práticas Guiadas</a>
+        </li>
+        <li class="nav-item active waves-light">
+          <a class="nav-link text-dark font-weight-bold">Blog</a>
+        </li>
+        <li class="nav-item active waves-light">
+          <a class="nav-link text-dark font-weight-bold">Contato</a>
         </li>
       </ul>
     </div>
