--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,61 @@
-<div class="section section-header">
+<div class="section section-header" id="mindfulness" style="margin-top: 160px;">
     <div class="parallax filter filter-color-red">
-        <div class="image"
-            style="background-image: url('assets/img/FOTOS SITE/foto 4.jpg')">
+        <div class="image" style="background-image: url('assets/img/FOTOS SITE/foto 3.jpg')">
         </div>
         <div class="container">
             <div class="content">
                 <div class="title-area">
-                    <h1 class="title-modern">Mindful Play</h1>
-                    <h2>O que é Mindfulness?</h2>
-                    <div class="separator line-separator">♦</div>
+                    <h1 class="title-modern">O que é Mindfulness?</h1>
+                    <p><strong>Mindfulness</strong> é um conjunto de práticas possíveis de serem realizadas por
+                        qualquer um, capazes de proporcionar às pessoas melhor qualidade na realização de suas
+                        tarefas diárias, uma vez que as ajuda a ter mais consciência de seus pensamentos, sensações
+                        e ao que se passa ao seu redor, permitindo a elas maior qualidade em suas ações e tomadas de
+                        decisão.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="section section-header" id="about">
+    <div class="parallax filter filter-color-yellow">
+        <div class="image" style="background-image: url('assets/img/FOTOS SITE/foto 8.jpg')">
+        </div>
+        <div class="container" style="margin-top: 50px;">
+            <div class="content">
+                <div class="title-area">
+                    <h1 class="title-modern">Sobre a Mindful Play</h1>
+                    <div class="separator separator-danger">✻</div>
+                    <p class="description">A <strong>Mindful Play</strong> oferece as práticas de Mindfulness para
+                        crianças com idade a partir dos 5 anos e para os segmentos do Ensino Fundamental 1 e 2, além
+                        do
+                        Ensino Médio. As práticas, adaptadas ao universo infantil e infantojuvenil, podem ser
+                        realizadas em escolas, em atendimento individual ou em pequenos grupos. Podem, também, ser
+                        conduzidas em português ou em inglês, no formato de aulas presenciais ou remotas.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="section section-header" id="metodologia">
+    <div class="parallax filter filter-color-yellow">
+        <div class="image" style="background-image: url('assets/img/Fotos site a ser tratadas/IMG_2170.jpeg')">
+        </div>
+        <div class="container" style="margin-top: 50px;">
+            <div class="content">
+                <div class="title-area">
+                    <h1 class="title-modern">Metodologia</h1>
+                    <p class="description">A Mindful Play lança mão de metodologias da Mindful Schools, precursora, nos
+                        EUA, de Mindfulness na Educação; da MindKids, uma das iniciativas pioneiras no Brasil; e da
+                        Inner Kids Foundation, de Susan Kaiser Greenland, uma das primeiras a adaptar as práticas de
+                        Mindfulness para crianças.
+                    </p>
+                    <hr class="hr-dark">
+                    <p>
+                        A Mindful Play entende que as aulas devem ser dinâmicas, lúdicas e interessantes. Nela, as aulas
+                        são desenvolvidas com o intuito de instigar a curiosidade dos alunos, além de gerar maior
+                        engajamento deles. Para isso, são utilizados diversos recursos, como jogos de atenção plena,
+                        histórias, brincadeiras, vídeos e atividades "hands-on", entre outros. </p>
                 </div>
             </div>
         </div>
@@ -16,47 +63,59 @@
 </div>
 
 <div class="section">
-    <div class="container">
-        <div class="row">
-            <div class="title-area">
-                <h2>Our Services</h2>
-                <div class="separator separator-danger">✻</div>
-                <p class="description">We promise you a new look and more importantly, a new attitude. We build that by getting to know you, your needs and creating the best looking clothes.</p>
-            </div>
+    <div class="parallax filter filter-color-red">
+        <div class="image" style="background-image: url('assets/img/FOTOS SITE/foto 3.jpg')">
         </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="info-icon">
-                    <div class="icon text-danger">
-                        <i class="pe-7s-graph1"></i>
-                    </div>
-                    <h3>Sales</h3>
-                    <p class="description">We make our design perfect for you. Our adjustment turn our clothes into your clothes.</p>
+        <div class="container" style="margin-top: 160px;">
+            <div class="row">
+                <div class="title-area">
+                    <h1 class="title-modern">Sobre a Mindful Play</h1>
+                    <div class="separator separator-danger">✻</div>
+                    <p class="description">We promise you a new look and more importantly, a new attitude. We build
+                        that
+                        by getting to know you, your needs and creating the best looking clothes.</p>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="info-icon">
-                    <div class="icon text-danger">
-                        <i class="pe-7s-note2"></i>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="info-icon">
+                        <div class="icon text-danger">
+                            <i class="pe-7s-graph1"></i>
+                        </div>
+                        <h3>Sales</h3>
+                        <p class="description">We make our design perfect for you. Our adjustment turn our clothes
+                            into
+                            your clothes.</p>
                     </div>
-                    <h3>Content</h3>
-                    <p class="description">We create a persona regarding the multiple wardrobe accessories that we provide..</p>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="info-icon">
-                    <div class="icon text-danger">
-                        <i class="pe-7s-music"></i>
+                <div class="col-md-4">
+                    <div class="info-icon">
+                        <div class="icon text-danger">
+                            <i class="pe-7s-note2"></i>
+                        </div>
+                        <h3>Content</h3>
+                        <p class="description">We create a persona regarding the multiple wardrobe accessories that
+                            we
+                            provide..</p>
                     </div>
-                    <h3>Music</h3>
-                    <p class="description">We like to present the world with our work, so we make sure we spread the word regarding our clothes.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="info-icon">
+                        <div class="icon text-danger">
+                            <i class="pe-7s-music"></i>
+                        </div>
+                        <h3>Music</h3>
+                        <p class="description">We like to present the world with our work, so we make sure we spread
+                            the
+                            word regarding our clothes.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="section section-our-team-freebie">
+<div class="section section-our-team-freebie" style="margin-top: 120px;">
     <div class="parallax filter filter-color-black">
         <div class="image" style="background-image:url('assets/img/header-2.jpeg')">
         </div>
@@ -66,7 +125,8 @@
                     <div class="title-area">
                         <h2>Who We Are</h2>
                         <div class="separator separator-danger">✻</div>
-                        <p class="description">We promise you a new look and more importantly, a new attitude. We build that by getting to know you, your needs and creating the best looking clothes.</p>
+                        <p class="description">We promise you a new look and more importantly, a new attitude. We
+                            build that by getting to know you, your needs and creating the best looking clothes.</p>
                     </div>
                 </div>
 
@@ -78,12 +138,15 @@
                                     <div class="card card-member">
                                         <div class="content">
                                             <div class="avatar avatar-danger">
-                                                <img alt="..." class="img-circle" src="assets/img/faces/face_1.jpg"/>
+                                                <img alt="..." class="img-circle" src="assets/img/faces/face_1.jpg" />
                                             </div>
                                             <div class="description">
                                                 <h3 class="title">Tina</h3>
                                                 <p class="small-text">CEO / Co-Founder</p>
-                                                <p class="description">I miss the old Kanye I gotta say at that time I’d like to meet Kanye And I promise the power is in the people and I will use the power given by the people to bring everything I have back to the people.</p>
+                                                <p class="description">I miss the old Kanye I gotta say at that time
+                                                    I’d like to meet Kanye And I promise the power is in the people
+                                                    and I will use the power given by the people to bring everything
+                                                    I have back to the people.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -92,12 +155,15 @@
                                     <div class="card card-member">
                                         <div class="content">
                                             <div class="avatar avatar-danger">
-                                                <img alt="..." class="img-circle" src="assets/img/faces/face_4.jpg"/>
+                                                <img alt="..." class="img-circle" src="assets/img/faces/face_4.jpg" />
                                             </div>
                                             <div class="description">
                                                 <h3 class="title">Andrew</h3>
                                                 <p class="small-text">Product Designer</p>
-                                                <p class="description">I miss the old Kanye I gotta say at that time I’d like to meet Kanye And I promise the power is in the people and I will use the power given by the people to bring everything I have back to the people.</p>
+                                                <p class="description">I miss the old Kanye I gotta say at that time
+                                                    I’d like to meet Kanye And I promise the power is in the people
+                                                    and I will use the power given by the people to bring everything
+                                                    I have back to the people.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -106,12 +172,15 @@
                                     <div class="card card-member">
                                         <div class="content">
                                             <div class="avatar avatar-danger">
-                                                <img alt="..." class="img-circle" src="assets/img/faces/face_3.jpg"/>
+                                                <img alt="..." class="img-circle" src="assets/img/faces/face_3.jpg" />
                                             </div>
                                             <div class="description">
                                                 <h3 class="title">Michelle</h3>
                                                 <p class="small-text">Marketing Hacker</p>
-                                                <p class="description">I miss the old Kanye I gotta say at that time I’d like to meet Kanye And I promise the power is in the people and I will use the power given by the people to bring everything I have back to the people.</p>
+                                                <p class="description">I miss the old Kanye I gotta say at that time
+                                                    I’d like to meet Kanye And I promise the power is in the people
+                                                    and I will use the power given by the people to bring everything
+                                                    I have back to the people.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -139,21 +208,21 @@
             <li class="active">
                 <a href="#testimonial1" role="tab" data-toggle="tab">
                     <div class="image-clients">
-                        <img alt="..." class="img-circle" src="assets/img/faces/face_5.jpg"/>
+                        <img alt="..." class="img-circle" src="assets/img/faces/face_5.jpg" />
                     </div>
                 </a>
             </li>
             <li>
                 <a href="#testimonial2" role="tab" data-toggle="tab">
                     <div class="image-clients">
-                        <img alt="..." class="img-circle" src="assets/img/faces/face_6.jpg"/>
+                        <img alt="..." class="img-circle" src="assets/img/faces/face_6.jpg" />
                     </div>
                 </a>
             </li>
             <li>
                 <a href="#testimonial3" role="tab" data-toggle="tab">
                     <div class="image-clients">
-                        <img alt="..." class="img-circle" src="assets/img/faces/face_2.jpg"/>
+                        <img alt="..." class="img-circle" src="assets/img/faces/face_2.jpg" />
                     </div>
                 </a>
             </li>
@@ -163,15 +232,27 @@
         <div class="tab-content">
             <div class="tab-pane active" id="testimonial1">
                 <p class="description">
-                    And I used a period because contrary to popular belief I strongly dislike exclamation points! We no longer have to be scared of the truth feels good to be home In Roman times the artist would contemplate proportions and colors. Now there is only one important color... Green I even had the pink polo I thought I was Kanye I promise I will never let the people down. I want a better life for all!
+                    And I used a period because contrary to popular belief I strongly dislike exclamation points! We
+                    no longer have to be scared of the truth feels good to be home In Roman times the artist would
+                    contemplate proportions and colors. Now there is only one important color... Green I even had
+                    the pink polo I thought I was Kanye I promise I will never let the people down. I want a better
+                    life for all!
                 </p>
             </div>
             <div class="tab-pane" id="testimonial2">
-                <p class="description">Green I even had the pink polo I thought I was Kanye I promise I will never let the people down. I want a better life for all! And I used a period because contrary to popular belief I strongly dislike exclamation points! We no longer have to be scared of the truth feels good to be home In Roman times the artist would contemplate proportions and colors. Now there is only one important color...
+                <p class="description">Green I even had the pink polo I thought I was Kanye I promise I will never
+                    let the people down. I want a better life for all! And I used a period because contrary to
+                    popular belief I strongly dislike exclamation points! We no longer have to be scared of the
+                    truth feels good to be home In Roman times the artist would contemplate proportions and colors.
+                    Now there is only one important color...
                 </p>
             </div>
             <div class="tab-pane" id="testimonial3">
-                <p class="description"> I used a period because contrary to popular belief I strongly dislike exclamation points! We no longer have to be scared of the truth feels good to be home In Roman times the artist would contemplate proportions and colors. The 'Gaia' team did a great work while we were collaborating. They provided a vision that was in deep connection with our needs and helped us achieve our goals.
+                <p class="description"> I used a period because contrary to popular belief I strongly dislike
+                    exclamation points! We no longer have to be scared of the truth feels good to be home In Roman
+                    times the artist would contemplate proportions and colors. The 'Gaia' team did a great work
+                    while we were collaborating. They provided a vision that was in deep connection with our needs
+                    and helped us achieve our goals.
                 </p>
             </div>
 
@@ -183,14 +264,14 @@
 
 <div class="section section-small section-get-started">
     <div class="parallax filter">
-        <div class="image"
-            style="background-image: url('assets/img/office-1.jpeg')">
+        <div class="image" style="background-image: url('assets/img/office-1.jpeg')">
         </div>
         <div class="container">
             <div class="title-area">
                 <h2 class="text-white">Do you want to work with us?</h2>
                 <div class="separator line-separator">♦</div>
-                <p class="description"> We are keen on creating a second skin for anyone with a sense of style! We design our clothes having our customers in mind and we never disappoint!</p>
+                <p class="description"> We are keen on creating a second skin for anyone with a sense of style! We
+                    design our clothes having our customers in mind and we never disappoint!</p>
             </div>
 
             <div class="button-get-started">
