--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!mobile">
   <header class="h-100">
-    <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar intro-fixed-nav"
+    <mdb-navbar SideClass="navbar fixed-top navbar-expand navbar-dark scrolling-navbar intro-fixed-nav"
       [containerInside]="false">
       <mdb-navbar-brand>
         <a class="logo navbar-brand text-dark" href="#">
@@ -10,51 +10,51 @@
       </mdb-navbar-brand>
       <links>
         <div class="row">
-          <div class="col-md-12 mt-4">
+          <div class="col-md-12">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active waves-light">
-                <a class="nav-link text-dark font-weight-bold">O que é Mindfulness
+                <a pageScroll class="nav-link text-dark font-weight-bold" href="#mindfulness">O que é Mindfulness
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item active waves-light dropdown">
-                <a class="nav-link text-dark font-weight-bold">Sobre a Mindful Play</a>
+                <a pageScroll class="nav-link text-dark font-weight-bold" href="#about">Sobre a Mindful Play</a>
                 <div class="dropdown-content">
-                  <a class="dropdown-item font-weight-bold">Metodologia</a>
-                  <a class="dropdown-item font-weight-bold">Programa</a>
+                  <a pageScroll class="dropdown-item font-weight-bold" href="#metodologia">Metodologia</a>
+                  <a pageScroll class="dropdown-item font-weight-bold">Programa</a>
                 </div>
               </li>
               <li class="nav-item waves-light">
-                <a class="nav-link text-dark font-weight-bold">Sobre a instrutora</a>
+                <a pageScroll class="nav-link text-dark font-weight-bold">Sobre a instrutora</a>
               </li>
               <li class="nav-item active waves-light dropdown">
-                <a class="nav-link text-dark font-weight-bold">Mindfulness no ambiente educacional</a>
+                <a pageScroll class="nav-link text-dark font-weight-bold">Mindfulness no ambiente educacional</a>
                 <div class="dropdown-content">
-                  <a class="dropdown-item font-weight-bold">Você sabia?</a>
-                  <a class="dropdown-item font-weight-bold">Por quê Mindfulness nas escolas?</a>
-                  <a class="dropdown-item font-weight-bold">Benefícios para educadores e gestores?</a>
-                  <a class="dropdown-item font-weight-bold">Benefícios para crianças e adolescentes</a>
-                  <a class="dropdown-item font-weight-bold">Um novo ABC</a>
+                  <a pageScroll class="dropdown-item font-weight-bold">Você sabia?</a>
+                  <a pageScroll class="dropdown-item font-weight-bold">Por quê Mindfulness nas escolas?</a>
+                  <a pageScroll class="dropdown-item font-weight-bold">Benefícios para educadores e gestores?</a>
+                  <a pageScroll class="dropdown-item font-weight-bold">Benefícios para crianças e adolescentes</a>
+                  <a pageScroll class="dropdown-item font-weight-bold">Um novo ABC</a>
                 </div>
               </li>
             </ul>
           </div>
-          <div class="col-md-12 mb-4">
+          <div class="col-md-12">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active waves-light">
-                <a class="nav-link text-dark font-weight-bold">Perspectivas Neorocientíficas</a>
+                <a pageScroll class="nav-link text-dark font-weight-bold">Perspectivas Neorocientíficas</a>
               </li>
               <li class="nav-item active waves-light">
-                <a class="nav-link text-dark font-weight-bold">Mindfulness e SEL</a>
+                <a pageScroll class="nav-link text-dark font-weight-bold">Mindfulness e SEL</a>
               </li>
               <li class="nav-item active waves-light">
-                <a class="nav-link text-dark font-weight-bold">Práticas Guiadas</a>
+                <a pageScroll class="nav-link text-dark font-weight-bold">Práticas Guiadas</a>
               </li>
               <li class="nav-item active waves-light">
-                <a class="nav-link text-dark font-weight-bold">Blog</a>
+                <a pageScroll class="nav-link text-dark font-weight-bold">Blog</a>
               </li>
               <li class="nav-item active waves-light">
-                <a class="nav-link text-dark font-weight-bold">Contato</a>
+                <a pageScroll class="nav-link text-dark font-weight-bold">Contato</a>
               </li>
             </ul>
           </div>
@@ -71,7 +71,7 @@
           height="44">Mindful Play</h5>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active waves-light">
-          <a class="nav-link text-dark">O que é Mindfulness
+          <a pageScroll class="nav-link text-dark" href="#mindfulness">O que é Mindfulness
             <span class="sr-only">(current)</span>
           </a>
         </li>
