--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,123 +1,101 @@
-<div *ngIf="!mobile">
-  <header class="h-100">
+<!--header>
     <mdb-navbar SideClass="navbar fixed-top navbar-expand navbar-dark scrolling-navbar intro-fixed-nav"
       [containerInside]="false">
       <mdb-navbar-brand>
         <a class="logo navbar-brand text-dark" href="#">
-          <strong><img src="../../assets/img/logos/Simbolo flor COR.png" alt="logo" width="50" height="44">Mindful
+          <strong><img src="../../assets/img/logos/Simbolo flor COR.png" alt="logo" width="40" height="40">Mindful
             Play</strong>
         </a>
       </mdb-navbar-brand>
       <links>
         <div class="row">
           <div class="col-md-12">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active waves-light">
-                <a pageScroll class="nav-link text-dark font-weight-bold" href="#mindfulness">O que é Mindfulness
-                  <span class="sr-only">(current)</span>
+            <ul class="navbar-nav">
+              <li *ngFor="let link of links" class="nav-item active waves-light dropdown">
+                <a pageScroll class="nav-link text-dark font-weight-bold" href="#{{link.id}}">{{link.title}}
                 </a>
-              </li>
-              <li class="nav-item active waves-light dropdown">
-                <a pageScroll class="nav-link text-dark font-weight-bold" href="#about">Sobre a Mindful Play</a>
-                <div class="dropdown-content">
-                  <a pageScroll class="dropdown-item font-weight-bold" href="#metodologia">Metodologia</a>
-                  <a pageScroll class="dropdown-item font-weight-bold">Programa</a>
-                </div>
-              </li>
-              <li class="nav-item waves-light">
-                <a pageScroll class="nav-link text-dark font-weight-bold">Sobre a instrutora</a>
-              </li>
-              <li class="nav-item active waves-light dropdown">
-                <a pageScroll class="nav-link text-dark font-weight-bold">Mindfulness no ambiente educacional</a>
-                <div class="dropdown-content">
-                  <a pageScroll class="dropdown-item font-weight-bold">Você sabia?</a>
-                  <a pageScroll class="dropdown-item font-weight-bold">Por quê Mindfulness nas escolas?</a>
-                  <a pageScroll class="dropdown-item font-weight-bold">Benefícios para educadores e gestores?</a>
-                  <a pageScroll class="dropdown-item font-weight-bold">Benefícios para crianças e adolescentes</a>
-                  <a pageScroll class="dropdown-item font-weight-bold">Um novo ABC</a>
+                <div *ngIf="link.subLink" class="dropdown-content">
+                  <div *ngFor="let subLinks of link.subLinks">
+                    <a pageScroll class="dropdown-item font-weight-bold" href="#{{subLinks.id}}">{{subLinks.title}}</a>
+                  </div>
                 </div>
               </li>
             </ul>
           </div>
           <div class="col-md-12">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active waves-light">
-                <a pageScroll class="nav-link text-dark font-weight-bold">Perspectivas Neorocientíficas</a>
-              </li>
-              <li class="nav-item active waves-light">
-                <a pageScroll class="nav-link text-dark font-weight-bold">Mindfulness e SEL</a>
-              </li>
-              <li class="nav-item active waves-light">
-                <a pageScroll class="nav-link text-dark font-weight-bold">Práticas Guiadas</a>
-              </li>
-              <li class="nav-item active waves-light">
-                <a pageScroll class="nav-link text-dark font-weight-bold">Blog</a>
-              </li>
-              <li class="nav-item active waves-light">
-                <a pageScroll class="nav-link text-dark font-weight-bold">Contato</a>
+              <li *ngFor="let link of links2" class="nav-item active waves-light dropdown">
+                <a pageScroll class="nav-link text-dark font-weight-bold" href="#{{link.id}}">{{link.title}}
+                </a>
+                <div *ngIf="link.subLink" class="dropdown-content">
+                  <div *ngFor="let subLinks of link.subLinks">
+                    <a pageScroll class="dropdown-item font-weight-bold" href="#{{subLinks.id}}">{{subLinks.title}}</a>
+                  </div>
+                </div>
               </li>
             </ul>
           </div>
         </div>
       </links>
     </mdb-navbar>
-  </header>
-</div>
+  </header-->
+<nav class="navbar navbar-default navbar-transparent navbar-fixed-top" color-on-scroll="200">
+  <!-- if you want to keep the navbar hidden you can add this class to the navbar "navbar-burger"-->
+  <div class="container">
+    <div class="navbar-header">
+      <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar bar1"></span>
+        <span class="icon-bar bar2"></span>
+        <span class="icon-bar bar3"></span>
+      </button>
 
-<div *ngIf="mobile" class="pos-f-t">
-  <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-light p-4">
-      <h5 class="text-dark h4"><img src="../../assets/img/logos/Simbolo flor COR.png" alt="logo" width="50"
-          height="44">Mindful Play</h5>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active waves-light">
-          <a pageScroll class="nav-link text-dark" href="#mindfulness">O que é Mindfulness
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item active waves-light dropdown">
-          <a class="nav-link text-dark font-weight-bold">Sobre a Mindful Play</a>
-          <div class="dropdown-content">
-            <a class="dropdown-item font-weight-bold">Metodologia</a>
-            <a class="dropdown-item font-weight-bold">Programa</a>
+    </div>
+
+    <div class="collapse navbar-collapse">
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-md-3">
+            <a class="logo navbar-brand text-dark" href="#">
+              <strong><img src="../../assets/img/logos/Simbolo flor COR.png" alt="logo" width="40" height="40">Mindful
+                Play</strong>
+            </a>
           </div>
-        </li>
-        <li class="nav-item waves-light">
-          <a class="nav-link text-dark font-weight-bold">Sobre a instrutora</a>
-        </li>
-        <li class="nav-item active waves-light dropdown">
-          <a class="nav-link text-dark font-weight-bold">Mindfulness no ambiente educacional</a>
-          <div class="dropdown-content">
-            <a class="dropdown-item font-weight-bold">Você sabia?</a>
-            <a class="dropdown-item font-weight-bold">Por quê Mindfulness nas escolas?</a>
-            <a class="dropdown-item font-weight-bold">Benefícios para educadores e gestores?</a>
-            <a class="dropdown-item font-weight-bold">Benefícios para crianças e adolescentes</a>
-            <a class="dropdown-item font-weight-bold">Um novo ABC</a>
+          <div class="col-md-9">
+            <ul class="nav navbar-nav navbar-right navbar-uppercase">
+              <li *ngFor="let link of links" class="dropdown">
+                <a class="dropdown-toggle" href="#{{link.id}}">{{link.title}} <span class="sr-only">(current)</span></a>
+              </li>
+              <li *ngFor="let link of links2" class="dropdown">
+                <a class="dropdown-toggle" href="#{{link.id}}">{{link.title}} <span class="sr-only">(current)</span></a>
+              </li>
+            </ul>
           </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+</nav>
+
+<!--div *ngIf="!mobile">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+      aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="/">Mindful Play</a>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo03"
+      style="position: relative; z-index: 1000; scroll-behavior: auto;">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li *ngFor="let link of links" class="nav-item active">
+          <a class="nav-link" href="#{{link.id}}">{{link.title}} <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item active waves-light">
-          <a class="nav-link text-dark font-weight-bold">Perspectivas Neorocientíficas</a>
-        </li>
-        <li class="nav-item active waves-light">
-          <a class="nav-link text-dark font-weight-bold">Mindfulness e SEL</a>
-        </li>
-        <li class="nav-item active waves-light">
-          <a class="nav-link text-dark font-weight-bold">Práticas Guiadas</a>
-        </li>
-        <li class="nav-item active waves-light">
-          <a class="nav-link text-dark font-weight-bold">Blog</a>
-        </li>
-        <li class="nav-item active waves-light">
-          <a class="nav-link text-dark font-weight-bold">Contato</a>
+        <li *ngFor="let link of links2" class="nav-item active">
+          <a class="nav-link" href="#{{link.id}}">{{link.title}} <span class="sr-only">(current)</span></a>
         </li>
       </ul>
     </div>
-
-  </div>
-  <nav class="navbar navbar-light bg-light text-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent"
-      aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
   </nav>
-</div>
+</div-->
