--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
           <div class="row">
             <div class="col-md-3">
               <a class="logo navbar-brand text-dark" href="#">
-                <strong><img src="../../assets/img/logos/Simbolo flor COR.png" alt="logo" width="40" height="40">Mindful
+                <strong><img src="/assets/img/logos/Simbolo flor COR.png" alt="logo" width="40" height="40">Mindful
                   Play</strong>
               </a>
             </div>
