--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<!--app-navbar></app-navbar-->
 <div id="mindfulness" style="background-image: url('/assets/img/images/foto 9.jpg');background-repeat: repeat-y;">
     <div class="section section-header">
         <div class="parallax filter filter-color-red">
@@ -367,3 +368,4 @@
         </div>
     </div>
 </div>
+<app-footer></app-footer>
