--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,30 +1,27 @@
-<footer class="footer footer-big footer-color-black" data-color="black">
+<footer class="footer footer-big" data-color="black">
     <div class="container">
         <div class="row">
             <div class="col-md-2 col-sm-3">
                 <div class="info">
-                    <h5 class="title">Company</h5>
+                    <h5 class="title"><img src="/assets/img/logos/Simbolo flor COR.png" style="height: 40px; width: 40px;" alt="logo">Mindful Play</h5>
                     <nav>
                         <ul>
                             <li>
-                                <a href="#">Home</a></li>
+                                <a href="/">Home</a></li>
                             <li>
-                                <a href="#">Find offers</a>
+                                <a href="/blog">Blog</a>
                             </li>
                             <li>
-                                <a href="#">Discover Projects</a>
+                                <a href="#contato">Contato</a>
                             </li>
                             <li>
-                                <a href="#">Our Portfolio</a>
-                            </li>
-                            <li>
-                                <a href="#">About Us</a>
+                                <a href="#sobre">Sobre nós</a>
                             </li>
                         </ul>
                     </nav>
                 </div>
             </div>
-            <div class="col-md-3 col-md-offset-1 col-sm-3">
+            <!--div class="col-md-3 col-md-offset-1 col-sm-3">
                 <div class="info">
                     <h5 class="title"> Help and Support</h5>
                      <nav>
@@ -47,8 +44,8 @@
                         </ul>
                     </nav>
                 </div>
-            </div>
-            <div class="col-md-3 col-sm-3">
+            </div-->
+            <!--div class="col-md-3 col-sm-3">
                 <div class="info">
                     <h5 class="title">Latest News</h5>
                     <nav>
@@ -67,10 +64,10 @@
                         </ul>
                     </nav>
                 </div>
-            </div>
+            </div-->
             <div class="col-md-2 col-md-offset-1 col-sm-3">
                 <div class="info">
-                    <h5 class="title">Follow us on</h5>
+                    <h5 class="title">Social</h5>
                     <nav>
                         <ul>
                             <li>
@@ -79,18 +76,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="btn btn-social btn-dribbble btn-simple">
-                                    <i class="fa fa-dribbble"></i> Dribbble
-                                </a>
-                            </li>
-                            <li>
                                 <a href="#" class="btn btn-social btn-twitter btn-simple">
-                                    <i class="fa fa-twitter"></i> Twitter
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn btn-social btn-reddit btn-simple">
-                                    <i class="fa fa-google-plus-square"></i> Google+
+                                    <i class="fa fa-linkedin"></i> Linkedin
                                 </a>
                             </li>
                         </ul>
@@ -100,7 +87,7 @@
         </div>
         <hr>
         <div class="copyright">
-             © <script> document.write(new Date().getFullYear()) </script> Creative Tim, made with love
+             © <script> document.write(new Date().getFullYear()) </script> 9ember
         </div>
     </div>
 </footer>
