--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -87,7 +87,7 @@
         </div>
         <hr>
         <div class="copyright">
-             © <script> document.write(new Date().getFullYear()) </script> 9ember
+             © <script> document.write(new Date().getFullYear()) </script> <a href="https://www.9ember.com" target="_blank">9ember</a>
         </div>
     </div>
 </footer>
