--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
             <div class="container">
                 <div class="content">
                     <div class="center title-area">
-                        <div class="col-md-12" style="margin-top: 80px; margin-bottom: 80px;">
+                        <div class="col-md-12">
                             <div class="row">
                                 <div class="col-md-6 mb-2">
                                     <h1 style="font-size: 50px;">O que é</h1>
@@ -198,8 +198,6 @@
                         <div class="title-area">
                             <h2>Sobre a Instrutora</h2>
                             <div class="separator separator-danger">✻</div>
-                            <p class="description">We promise you a new look and more importantly, a new attitude. We
-                                build that by getting to know you, your needs and creating the best looking clothes.</p>
                         </div>
                     </div>
 
@@ -211,7 +209,7 @@
                                         <div class="card card-member">
                                             <div class="content">
                                                 <div>
-                                                    <img alt="Instrutora" style="height: 250px; width: 320px;"
+                                                    <img alt="Instrutora" style="height: 220px; width: 320px;"
                                                         src="assets/img/images/IMG_2864.jpeg" />
                                                 </div>
                                                 <div class="description">
