--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,29 +1,18 @@
-html {
-    scroll-behavior: smooth;
-  }
+  @import 'https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap';
 
-
-.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
   .dropdown {
     position: relative;
     display: inline-block;
-    z-index: 100000;
+    z-index: 100;
+
   }
   
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: transparent;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
   }
   
   .dropdown-content a {
@@ -31,6 +20,7 @@ html {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+
   }
   
   .dropdown-content a:hover {background-color: #ddd;}
@@ -38,6 +28,66 @@ html {
   .dropdown:hover .dropdown-content {display: block;}
   
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+  a {
+    text-decoration: none;
+    color: #1E1E23;
+    opacity:1;
+    font-family: 'Reenie Beanie', sans serif;
+    font-size: 1.7em;
+    font-weight: 400;
+    transition: 200ms;
+  }
+  a:hover {
+    opacity:0.5;
+  }
+
+  *{
+    margin:0;
+    padding:0;
+  }
+   
+  p {
+    font-size: 1rem;
+    font-weight: normal;
+  }
+   
+  ul,li{
+    list-style:none;
+  }
+  ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  ul li a{
+    text-decoration:none;
+    color:#000;
+    background:#ffc;
+    display:block;
+    padding:1em;
+    transform: rotate(-6deg);
+    box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+  }
+  ul li{
+    margin:1em;
+  }
+
+  ul li:nth-child(even) a{
+    transform:rotate(4deg);
+    position:relative;
+    top:5px;
+  }
+  ul li:nth-child(3n) a{
+    transform:rotate(-3deg);
+    position:relative;
+    top:-5px;
+  }
+  ul li:nth-child(5n) a{
+    transform:rotate(5deg);
+    position:relative;
+    top:-10px;
+  }
 
   
   
