--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,26 @@
 <div class="col-md-12">
     <ul class="nav nav-tabs nav-pills" style="background-color: white">
         <li routerLinkActive="active" class="nav-item col-md-2">
-            <a routerLink="/home" class="nav-link"><img src="assets/img/logos/Simbolo flor COR.png" alt="logo"
+            <a routerLink="/home" (click)="home()" class="nav-link"><img src="assets/img/logos/Simbolo flor COR.png" alt="logo"
                     width="30" height="30">
                 Bem-vindo</a>
         </li>
         <li routerLinkActive="active" class="nav-item">
-            <a routerLink="/blog" class="nav-link">Blog</a>
+            <a routerLink="/blog" (click)="blog()" class="nav-link">Blog</a>
         </li>
-        <li routerLinkActive="active" *ngFor="let link of links" class="dropdown nav-item">
-            <a pageScroll class="dropdown-toggle nav-link" href="#{{link.id}}">{{link.title}}<span
-                    class="sr-only">(current)</span></a>
-            <div *ngIf="link.subLink" class="dropdown-content">
-                <ul>
-                    <li *ngFor="let subLink of link.subLinks">
-                        <a pageScroll href="#{{subLink.id}}"><strong>{{subLink.title}}</strong></a>
-                    </li>
-                </ul>
-            </div>
-        </li>
-        <!--li *ngFor="let link of links2" class="dropdown nav-item">
-            <a pageScroll class="dropdown-toggle col-md-6" href="#{{link.id}}">{{link.title}}<span
-                    class="sr-only">(current)</span></a>
-            <div *ngIf="link.subLink" class="dropdown-content">
-                <div *ngFor="let subLink of link.subLinks">
-                    <a pageScroll href="#{{subLink.id}}"><strong>{{subLink.title}}</strong></a>
+        <div *ngIf="!isBlog">
+            <li routerLinkActive="active" *ngFor="let link of links" class="dropdown nav-item">
+                <a pageScroll class="dropdown-toggle nav-link" href="#{{link.id}}">{{link.title}}<span
+                        class="sr-only">(current)</span></a>
+                <div *ngIf="link.subLink" class="dropdown-content">
+                    <ul>
+                        <li *ngFor="let subLink of link.subLinks">
+                            <a pageScroll href="#{{subLink.id}}"><strong>{{subLink.title}}</strong></a>
+                        </li>
+                    </ul>
                 </div>
-            </div>
-        </li-->
-
+            </li>
+        </div>
     </ul>
-    <!--app-navbar></app-navbar>
-    <app-home></app-home>
-    <app-footer></app-footer-->
     <router-outlet></router-outlet>
 </div>
