--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -188,7 +188,7 @@
             </div>
         </div>
     </div-->
-    <div class="section section-our-team-freebie">
+    <div class="section section-our-team-freebie" id="instrutora">
         <div class="parallax filter filter-color-black">
             <div class="image" style="background-image:url('assets/img/images/foto 10.jpg')">
             </div>
@@ -336,13 +336,14 @@
 
     <!--MINDFULNESS NO AMBIENTE EDUCACIONAL-->
 
-    <div class="section section-header" id="sabia">
+    <div class="section section-header" id="ambiente">
         <div class="parallax filter filter-color-yellow" style="height: 800px;">
-            <div class="image" style="background-image: url('assets/img/images/foto 4.jpg');background-repeat: repeat; height: 100%;">
+            <div class="image"
+                style="background-image: url('assets/img/images/foto 4.jpg');background-repeat: repeat; height: 100%;">
             </div>
             <div class="container">
                 <div class="content">
-                    <div class="title-area" style="margin-top: 10px;">
+                    <div class="title-area" style="margin-top: 10px;" id="sabia">
                         <h1 style="font-size: 30px;">MINDFULNESS NO AMBIENTE EDUCACIONAL</h1>
                         <h2 style="font-size: 20px;">Você sabia?</h2>
                         <p class="description">Muitas escolas têm adotado as práticas de Mindfulness no Brasil e no
@@ -360,16 +361,18 @@
         </div>
     </div>
 
-    <div class="section section-header" id="sabia">
+    <div class="section section-header">
         <div class="parallax filter filter-color-yellow" style="height: 1000px;">
-            <div class="image" style="background-image: url('assets/img/images/foto 2.jpg');background-repeat: repeat; height: 100%;">
+            <div class="image"
+                style="background-image: url('assets/img/images/foto 2.jpg');background-repeat: repeat; height: 100%;">
             </div>
             <div class="container">
                 <div class="content">
                     <div class="title-area" style="margin-top: 20px;">
                         <p class="description">Também não faltam programas de Mindfulness baseados nos Estados Unidos. A
                             Mindful Schools, por exemplo, já treinou mais de 50.000 educadores em Mindfulness. No
-                            Brasil, também contamos com inúmeros programas sendo adotados em escolas por todo o país. <br>
+                            Brasil, também contamos com inúmeros programas sendo adotados em escolas por todo o país.
+                            <br>
 
                             De acordo com um ensaio publicado na revista Developmental Psychology, alunos dos últimos
                             anos do Ensino Fundamental 1 de uma escola pública em British Columbia (Canadá) que
@@ -383,9 +386,43 @@
 
                         </p>
                         <br>
-                        <p class="description"><em><strong>Fontes: </strong>University of British Columbia, <br>Mindfulness based programs in schools
-                            Time Magazine</em>
-                            </p>
+                        <p class="description"><em><strong>Fontes: </strong>University of British Columbia,
+                                <br>Mindfulness based programs in schools
+                                Time Magazine</em>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="section section-header">
+        <div class="parallax filter filter-color-yellow" style="height: 1000px;">
+            <div class="image"
+                style="background-image: url('assets/img/images/foto 5.jpg');background-repeat: repeat; height: 100%;">
+            </div>
+            <div class="container">
+                <div class="content">
+                    <div class="title-area" style="margin-top: 20px;">
+                        <p class="description">Um <a
+                                href="https://www.gse.harvard.edu/news/uk/19/01/making-time-mindfulness#:~:text=A%20new%20study%20suggests%20that,academically%20and%20avoid%20behavior%20problems."
+                                target="_blank">estudo</a> de Harvard, feito com alunos de 6º ano de uma escola em
+                            Boston (EUA) e conduzido por uma equipe de pesquisadores em uma parceria entre o Center for
+                            Education Policy Research (CEPR) - da Harvard University -, o Massachusetts Institute of
+                            Technology (MIT) e a Transforming Education, mostrou que, após 8 semanas de programa:
+
+                        </p>
+                        <ul class="description text-justify">
+                            <li>
+                                os alunos estavam menos estressados ​​do que seus colegas não participantes do programa;
+
+                            </li>
+                            <li>
+                                praticar a atenção plena ajudou a aprimorar a capacidade de se concentrar, expandindo a
+                                capacidade dos alunos de aprender e regular as próprias emoções.
+
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -394,20 +431,49 @@
 
     <!--CONTATO-->
 
-    <div class="section section-small section-get-started">
-        <div class="parallax filter">
-            <div class="image" style="background-image: url('assets/img/images/foto 5.jpg'); background-repeat: repeat; height: 100%;">
+    <div class="section section-small section-get-started" id="contato">
+        <div class="parallax filter filter-color-yellow" style="height: 600px;">
+            <div class="image" style="background-image: url('assets/img/images/foto 10.jpg'); height: 100%;">
             </div>
             <div class="container">
-                <div class="title-area">
-                    <h2 class="text-white">Do you want to work with us?</h2>
-                    <div class="separator line-separator">♦</div>
-                    <p class="description"> We are keen on creating a second skin for anyone with a sense of style! We
-                        design our clothes having our customers in mind and we never disappoint!</p>
-                </div>
-
-                <div class="button-get-started">
-                    <a href="#gaia" class="btn btn-danger btn-fill btn-lg">Contato</a>
+                <div class="title-area" style="margin-top: -50px;">
+                    <h2 class="text-white">Contato</h2>
+                    <form class="needs-validate">
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <label for="validationServer01" class="form-label">Seu Nome</label>
+                                    <input type="text" class="form-control is-valid" id="validationServer01" value=""
+                                        placeholder="Seu nome" required>
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="validationServer01" class="form-label">Seu Email</label>
+                                    <input type="email" class="form-control is-valid" id="validationServer01" value=""
+                                        placeholder="seuemail@email.com" required>
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="validationServer01" class="form-label">Seu Celular</label>
+                                    <input type="text" class="form-control is-valid" id="validationServer01" value=""
+                                        placeholder="(99)99999-9999" required>
+                                </div>
+                                <div class="col-md-12">
+                                    <textarea class="form-control" placeholder="Sua mensagem"></textarea>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-check">
+                                    <input class="form-check-input is-invalid" type="checkbox" value=""
+                                        id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
+                                    <label class="form-check-label" style="margin-left: 4px;" for="invalidCheck3">
+                                        Concordo em fornecer meus dados
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-primary" type="submit">Enviar Mensagem</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
