--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,14 @@
 <div class="col-md-12">
-    <h1>Blog em desenvolvimento</h1>
+  <h1>Blog em desenvolvimento</h1>
+  <ngx-link-preview>
+    <div class="spinner"></div>
+  </ngx-link-preview>
+
+  <ngx-link-preview apiRoute="demo" [links]="links"
+    [getApiEndpoint$]="apiCallbackFn">
+    <h2>Here can be your custom loading spinner</h2>
+  </ngx-link-preview>
+
+
+
 </div>
