--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,14 +1,18 @@
-<div class="col-md-12">
-  <h1>Blog em desenvolvimento</h1>
-  <ngx-link-preview>
-    <div class="spinner"></div>
-  </ngx-link-preview>
-
-  <ngx-link-preview apiRoute="demo" [links]="links"
+<div class="col-md-12 mt-4">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card" style="width: 25rem;">
+        <img class="card-img-top" src="assets/img/images/foto 1.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--ngx-link-preview apiRoute="demo" [links]="links"
     [getApiEndpoint$]="apiCallbackFn">
     <h2>Here can be your custom loading spinner</h2>
-  </ngx-link-preview>
-
-
-
+  </ngx-link-preview-->
 </div>
