--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-    <ul class="nav nav-tabs nav-pills" style="background-color: white">
+    <ul class="nav nav-tabs nav-pills" style="background-color: white;">
         <li routerLinkActive="active" class="nav-item col-md-2">
             <a routerLink="/home" (click)="home()" class="nav-link"><img src="assets/img/logos/Simbolo flor COR.png"
                     alt="logo" width="30" height="30">
@@ -13,7 +13,7 @@
                 <a pageScroll (click)="subLink()" class="dropdown-toggle nav-link" data-hover="dropdown"
                     href="#{{link.id}}">{{link.title}}<span class="sr-only">(current)</span></a>
                 <!--div *ngIf="link.subLink" [ngClass]="showSubLink === 'none'? 'dropdown-content' : '' "-->
-                <div *ngIf="link.subLink" class="dropdown-content" style="margin-top: -50px;">
+                <div *ngIf="link.subLink" class="dropdown-content" style="margin-top: -30px;">
                     <ul>
                         <li *ngFor="let subLink of link.subLinks">
                             <a pageScroll href="#{{subLink.id}}"><strong>{{subLink.title}}</strong></a>
