--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <!--app-navbar></app-navbar-->
 <!--O QUE É-->
-<div id="mindfulness" style="background-image: url('/assets/img/images/foto 9.jpg');background-repeat: repeat-y;">
+<div id="mindfulness" style="background-image: url('assets/img/images/foto 9.jpg');background-repeat: repeat-y;">
     <div class="section section-header">
         <div class="parallax filter filter-color-red">
             <div class="image"
